Alteração no style img

--- a/src/Home/styles.css
+++ b/src/Home/styles.css
@@ -1,26 +1,25 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html{
+html {
   font-size: 62.5%;
 }
 
 body {
   font-size: 1.6rem;
-
 }
 
-@media (max-width: 1080px){
-  html{
+@media (max-width: 1080px) {
+  html {
     font-size: 58%;
   }
 }
 
-@media (max-width: 720px){
-  html{
+@media (max-width: 720px) {
+  html {
     font-size: 54%;
   }
 }
@@ -30,8 +29,6 @@ body {
   max-width: 1220px;
   margin: 0 auto;
   padding: 0 3rem;
-
-  
 }
 
 /* HEADER ...........................*/
@@ -40,7 +37,7 @@ header {
   position: relative;
   width: 100%;
   height: 90px;
-  box-shadow:  0px 2px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
   background: #fff;
 }
 
@@ -55,18 +52,18 @@ header nav a + a {
   margin-left: 2em;
 }
 
-header nav a:hover{
-  color: #6554C0;
+header nav a:hover {
+  color: #6554c0;
 }
 
-@media (max-width: 800px){
-  header nav{
+@media (max-width: 800px) {
+  header nav {
     display: none;
   }
 
   header .menu {
     font-size: 22px;
-    color: #6554C0;
+    color: #6554c0;
   }
 
   header .menu.open {
@@ -85,7 +82,7 @@ header nav a:hover{
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(255, 255, 255, .9);
+    background-color: rgba(255, 255, 255, 0.9);
   }
 
   header nav a {
@@ -97,13 +94,11 @@ header nav a:hover{
   }
 }
 
-
-@media (min-width: 721px){
-  header .menu{
+@media (min-width: 721px) {
+  header .menu {
     display: none;
   }
 }
-
 
 header nav a {
   text-decoration: none;
@@ -111,51 +106,42 @@ header nav a {
   font-size: 2rem;
 }
 
-.banner{
+.banner {
   width: 100%;
   height: 650px;
-  
 }
 
 .banner .center {
-  height:  78%;
+  height: 78%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
 
-.banner .center img{
-  width: 700px;
+.banner .center img {
+  width: 70%;
   flex-shrink: 0;
 }
-
 
 .banner-text {
   margin-right: 8rem;
   width: 90%;
-
 }
 
 .banner-text p {
   font-size: 2rem;
-  color: #3F3D56;
+  color: #3f3d56;
 }
 
-.banner-text h1{
+.banner-text h1 {
   font-size: 4rem;
- 
 }
-
 
 .banner-links {
   margin-top: 2.5rem;
   display: flex;
   align-items: center;
-  
-  
 }
-
 
 .banner-links a:hover {
   text-decoration: none;
@@ -163,39 +149,37 @@ header nav a {
 
 .banner-links a.banner-btn {
   margin-right: 4.2rem;
-  padding: .6em 2em;
-  background: #6554C0;
+  padding: 0.6em 2em;
+  background: #6554c0;
   color: #fff;
   border-radius: 50px;
   font-size: 2rem;
   font-weight: bold;
   text-decoration: none;
-  transition: transform .2s, box-shadow .2s;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, .15);
-  
-  
+  transition: transform 0.2s, box-shadow 0.2s;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
 
 .banner-links a.banner-btn i {
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .banner-links a.banner-btn:hover {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, .1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   transform: translateY(-3px);
 }
 
 .banner-links a.banner-btn:active {
   transform: translateX(0);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, .13);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.13);
 }
 
-@media (max-width: 1180px){
+@media (max-width: 1180px) {
   .banner {
     height: 320px;
   }
 
-  .banner img{
+  .banner img {
     height: 320px;
   }
 
@@ -204,11 +188,10 @@ header nav a {
   }
 }
 
-@media (max-width: 1120px){
+@media (max-width: 1120px) {
   .banner {
     height: auto;
     padding: 4rem 0;
-    
   }
 
   .banner .center {
@@ -217,20 +200,19 @@ header nav a {
 
   .banner-text {
     margin-right: 0;
-    
   }
 
-  .banner-text h1{
+  .banner-text h1 {
     font-size: 3rem;
   }
 
-  .banner img{
+  .banner img {
     order: -1;
     margin-bottom: 3rem;
   }
 }
 
-@media (max-width: 480px){
+@media (max-width: 480px) {
   .banner-link {
     flex-direction: column;
   }
@@ -240,7 +222,7 @@ header nav a {
   }
 }
 
-.banner{
+.banner {
   background: #f0f0f5;
 }
 
@@ -248,7 +230,6 @@ header nav a {
 
 .about {
   padding: 6rem 0;
- 
 }
 
 .about .center {
@@ -259,24 +240,22 @@ header nav a {
 .about img {
   display: block;
   border-radius: 4px;
-  
 }
 
 .about-text {
   margin-left: 4rem;
- 
 }
 
 .about-text h1 {
-  color: #6554C0;
+  color: #6554c0;
   line-height: 1.2;
   font-size: 3.4rem;
   font-weight: 400;
 }
 
 .about-text p {
-  color: #3F3D56;
-  margin: .5rem 0 1.5rem;
+  color: #3f3d56;
+  margin: 0.5rem 0 1.5rem;
   font-size: 1.7rem;
 }
 
@@ -296,14 +275,13 @@ header nav a {
 }
 
 .about-text i {
-  color: #6554C0;
+  color: #6554c0;
   font-size: 12px;
   margin-right: 8px;
 }
 
 @media (max-width: 1240px) {
   .about img {
-   
   }
 }
 
@@ -321,7 +299,7 @@ header nav a {
   }
 }
 
-@media (max-width: 720px){
+@media (max-width: 720px) {
   .about {
     padding: 4rem 0;
   }
@@ -354,7 +332,6 @@ header nav a {
 .tech h3 {
   color: #777;
   font-weight: 400;
- 
 }
 
 .tech-list {
@@ -365,7 +342,6 @@ header nav a {
 }
 
 .tech-wrapper {
- 
   width: 50%;
   padding: 0 1rem;
   margin-bottom: 2rem;
@@ -376,19 +352,19 @@ header nav a {
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
-  transition: transform .2s, box-shadow .2s;
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .tech-item:hover {
   transform: translateY(-4px);
-  box-shadow: 0 1px 5px rgba(0, 0, 0, .1);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 .tech-item h4 {
   display: flex;
   align-items: center;
   color: #7159c1;
-  padding: 1.5rem 1.5rem .8rem;
+  padding: 1.5rem 1.5rem 0.8rem;
 }
 
 .tech-item h4 img {
@@ -397,13 +373,11 @@ header nav a {
   margin-right: 10px;
 }
 
-
 .tech-item img {
-  width: auto;
-  height: 200px;
+  width: 90%;
+  height: auto;
   margin-right: 10px;
 }
-
 
 .tech-wrapper a {
   text-decoration: none;
@@ -433,16 +407,16 @@ header nav a {
 .tech-info div + div {
   border-left: 1px solid #ddd;
 }
-
+/**/
 .tech-info div i {
   font-size: 14px;
-  color: #6554C0;
+  color: #6554c0;
 }
 
 .tech-info div span {
   color: #666;
   font-size: 1.5rem;
-  margin-top: .3rem;
+  margin-top: 0.3rem;
 }
 
 @media (max-width: 920px) {
@@ -468,6 +442,3 @@ header nav a {
     width: 100%;
   }
 }
-
-
-
