--- a/src/Home/styles.css
+++ b/src/Home/styles.css
@@ -29,6 +29,8 @@ body {
   max-width: 1220px;
   margin: 0 auto;
   padding: 0 3rem;
+  
+ 
 }
 
 /* HEADER ...........................*/
@@ -39,6 +41,11 @@ header {
   height: 90px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
   background: #fff;
+ 
+}
+
+header img{
+  width: 200px;
 }
 
 header .center {
@@ -53,7 +60,7 @@ header nav a + a {
 }
 
 header nav a:hover {
-  color: #6554c0;
+  color: #3f3d56;
 }
 
 @media (max-width: 800px) {
@@ -63,7 +70,7 @@ header nav a:hover {
 
   header .menu {
     font-size: 22px;
-    color: #6554c0;
+    color: #3f3d56;
   }
 
   header .menu.open {
@@ -106,17 +113,29 @@ header nav a {
   font-size: 2rem;
 }
 
+
+
 .banner {
+  
   width: 100%;
   height: 650px;
+  
+  
 }
 
-.banner .center {
-  height: 78%;
+
+.banner .back {
+  background: url('../img/Img.jpg') no-repeat;
+  background-size: 100%;
+ 
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-image: url('../img/Img.jpeg'); */
+
+  margin: 0 auto;
+  padding: 0 8rem;
+  
 }
 
 .banner .center img {
@@ -131,11 +150,13 @@ header nav a {
 
 .banner-text p {
   font-size: 2rem;
-  color: #3f3d56;
+ 
+  color: #888;
 }
 
 .banner-text h1 {
-  font-size: 4rem;
+  font-size: 6rem;
+  color: #fff;
 }
 
 .banner-links {
@@ -151,7 +172,7 @@ header nav a {
 .banner-links a.banner-btn {
   margin-right: 4.2rem;
   padding: 0.6em 2em;
-  background: #6554c0;
+  background: #3f3d56;
   color: #fff;
   border-radius: 50px;
   font-size: 2rem;
@@ -192,11 +213,12 @@ header nav a {
 @media (max-width: 1120px) {
   .banner {
     height: auto;
-    padding: 4rem 0;
+    padding: 0rem;
   }
 
-  .banner .center {
+  .banner .back {
     flex-direction: column;
+    padding: 4rem;
   }
 
   .banner-text {
@@ -248,7 +270,7 @@ header nav a {
 }
 
 .about-text h1 {
-  color: #6554c0;
+  color: #3f3d56;
   line-height: 1.2;
   font-size: 3.4rem;
   font-weight: 400;
@@ -276,7 +298,7 @@ header nav a {
 }
 
 .about-text i {
-  color: #6554c0;
+  color: #3f3d56;
   font-size: 12px;
   margin-right: 8px;
 }
@@ -364,7 +386,7 @@ header nav a {
 .tech-item h4 {
   display: flex;
   align-items: center;
-  color: #7159c1;
+  color: #3f3d56;
   padding: 1.5rem 1.5rem 0.8rem;
 }
 
@@ -411,7 +433,7 @@ header nav a {
 /**/
 .tech-info div i {
   font-size: 14px;
-  color: #6554c0;
+  color: #3f3d56;
 }
 
 .tech-info div span {
@@ -474,7 +496,7 @@ header nav a {
 }
 
 .blog-post i {
-  color: #0fcac6;
+  color: #3f3d56;
   font-size: 14px;
 }
 
@@ -541,7 +563,7 @@ header nav a {
   box-shadow: 0 15px 20px rgba(113, 89, 193, .35);
 }
 .blog-post:hover .post-text h3 {
-  color: #7159c1;
+  color: #3f3d56;
 }
 .blog-post:hover .post-footer span:first-child i {
   transform: translateX(5px);
@@ -593,7 +615,7 @@ header nav a {
 /* FOOTER ------------------------------------------------------------------- */
 
 footer {
-  background: #6554C0;
+  background: #3f3d56;
   text-align: center;
   padding: 5rem 0;
 }
